--- a/index.html
+++ b/index.html
@@ -255,12 +255,9 @@
                             </div>
                             <!-- Email address input-->
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="optional,email" />
-                                <label for="email">Email address (optional)</label>
-                                <div class="invalid-feedback" data-sb-feedback="email:optional">An email is optional.</div>
-                                <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
+                                <input class="form-control" id="email" type="email" placeholder="name@example.com" />
+                                <label for="email">Email address (optional) </label>
                             </div>
-                         
                             <!-- Message input-->
                             <div class="form-floating mb-3">
                                 <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
